Test/dafny0/TypeInstantiations.dfy.expect
TypeInstantiations.dfy(33,7): Error: an opaque type declaration (B) in a refining module cannot replace a more specific type declaration in the refinement base
TypeInstantiations.dfy(36,13): Error: a type declaration that requires equality support cannot be replaced by a codatatype
TypeInstantiations.dfy(40,7): Error: type 'G' is not allowed to change its number of type parameters (got 1, expected 0)
TypeInstantiations.dfy(41,7): Error: type 'H' is not allowed to change its number of type parameters (got 1, expected 2)
TypeInstantiations.dfy(42,7): Error: type 'J' is not allowed to change its number of type parameters (got 0, expected 1)
TypeInstantiations.dfy(51,8): Error: type 'R' is not allowed to change its number of type parameters (got 0, expected 1)
TypeInstantiations.dfy(53,8): Error: type 'T' is not allowed to change its number of type parameters (got 1, expected 0)
TypeInstantiations.dfy(55,7): Error: type 'TP0' is not allowed to change its number of type parameters (got 1, expected 0)
TypeInstantiations.dfy(56,7): Error: type 'TP1' is not allowed to change its number of type parameters (got 0, expected 1)
TypeInstantiations.dfy(34,11): Error: type 'C', which does not support equality, is used to refine an opaque type with equality support
TypeInstantiations.dfy(35,7): Error: type 'D', which does not support equality, is used to refine an opaque type with equality support
TypeInstantiations.dfy(48,7): Error: type 'N', which does not support equality, is used to refine an opaque type with equality support
TypeInstantiations.dfy(69,29): Error: RHS (of type List<int>) not assignable to LHS (of type MyList.List<real>) (covariant type parameter would require real <: int)
TypeInstantiations.dfy(81,8): Error: the type of this variable is underspecified
TypeInstantiations.dfy(82,8): Error: the type of this variable is underspecified
TypeInstantiations.dfy(96,22): Error: RHS (of type List<int>) not assignable to LHS (of type List<real>) (covariant type parameter would require real <: int)
TypeInstantiations.dfy(108,8): Error: the type of this variable is underspecified
TypeInstantiations.dfy(109,8): Error: the type of this variable is underspecified
TypeInstantiations.dfy(127,27): Error: RHS (of type int) not assignable to LHS (of type C.Classic<real>)
TypeInstantiations.dfy(137,8): Error: the type of this variable is underspecified
TypeInstantiations.dfy(137,23): Error: type variable 'A' in the function call to 'F' could not be determined
21 resolution/type errors detected in TypeInstantiations.dfy
